--- a/notes.yml
+++ b/notes.yml
@@ -1,1 +1,1 @@
-{"object-stream":{"list":[{"models.Note":[{"noteTitle":"Playing Soccer","notePriority":2,"noteCategory":"Sports","isNoteArchived":false},{"noteTitle":"Studying time","notePriority":5,"noteCategory":"College","isNoteArchived":false}]}]}}
+{"object-stream":{"list":[{"models.Note":[{"noteTitle":"Sports","notePriority":3,"noteCategory":"Sports","isNoteArchived":false},{"noteTitle":"Studying time","notePriority":5,"noteCategory":"College","isNoteArchived":false}]}]}}
